--- a/Contact.html
+++ b/Contact.html
@@ -14,7 +14,7 @@
                         <td>adityabelekar02@gmail.com</td>
                     </tr>
             </Table><br>
-            <form class="" action="mailto:adityabelekar02@gamil.com" method="post" enctype="text\plain"
+            <form class="" action="mailto:adityabelekar02@gamil.com" method="post" enctype="text\plain">
                 <Lable>Your Name:</Lable>
             <Input Type="text" Name="Name"><br>
                 <lable>Email:</lable>
